tests/rascal/negative/name_errors/L1/7_assign_type.ob
MODULE Bla;

TYPE
  x = INTEGER;

BEGIN
  x := 1
END Bla.